Fixed css and image name

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -127,6 +127,10 @@ input:focus {
     width: 80%;
   }
 
+  .subscribe-text {
+    width: 80%;
+  }
+
   .socialmedia {
     position: absolute;
     top: 60%;
