--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,7 +10,7 @@
 		<title>Ryan Scherer</title>
 
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<!-- Optional: Include the jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
