--- a/public/views/index.html
+++ b/public/views/index.html
@@ -64,18 +64,26 @@
 			  </div>
 			</nav>
 
-		<div class="title-left">
+		<div class="title-center">
 			<h1>Coming Soon</h1>
+			<hr class="homepage-underline-long" />
+			<hr class="homepage-underline-short" />
+			<br />
 			<input class="form-control subscribe-text" id="inputdefault" type="text">
 			<button type="button" class="btn btn-warning subscribe-button">Email Me</button>
 		</div>
-		<div class="socialmedia">
-			<h4>[In the mean time]</h4>
-			<img class="socialmedia-icon" src="../images/social-media/circle/Linkedin.png" />
-			<img class="socialmedia-icon" src="../images/social-media/circle/Github.png" />
-			<img class="socialmedia-icon" src="../images/social-media/circle/Twitter.png" />
-			<img class="socialmedia-icon" src="../images/social-media/circle/Instagram.png" />
-			<img class="socialmedia-icon" src="../images/social-media/circle/Facebook.png" />
-		</div>
+
+		<nav class="navbar navbar-inverse navbar-fixed-bottom">
+  		<div class="container">
+				<footer>
+					<h4>[ In the mean time ]</h4>
+					<img class="socialmedia-icon" src="../images/social-media/circle/Linkedin.png" />
+					<img class="socialmedia-icon" src="../images/social-media/circle/Github.png" />
+					<img class="socialmedia-icon" src="../images/social-media/circle/Twitter.png" />
+					<img class="socialmedia-icon" src="../images/social-media/circle/Instagram.png" />
+					<img class="socialmedia-icon" src="../images/social-media/circle/Facebook.png" />
+				</footer>
+			</div>
+	</nav>
 	</body>
 </html>
