--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,6 +96,12 @@ footer {
 }
 
 @media only screen and (max-width: 500px) {
+  .navbar {
+     background: rgba(0,0,0,.8);
+     opacity: .8;
+     border-bottom: .5px #888888 solid;
+  }
+
   .navbar-toggle {
     background-color: transparent;
   }
@@ -105,6 +111,6 @@ footer {
   }
 
   .title-center {
-    width: 90%;
+    width: 85%;
   }
 }
