--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,8 +75,9 @@ input:focus {
 }
 
 .subscribe-text {
-  margin: 10px 0 15px 0;
-  padding: 5px;
+  margin: auto;
+  padding: auto;
+  width: 80%;
 }
 
 .subscribe-button {
