--- a/public/views/index.html
+++ b/public/views/index.html
@@ -66,24 +66,23 @@
 
 		<div class="title-center">
 			<h1>Coming Soon</h1>
-			<hr class="homepage-underline-long" />
-			<hr class="homepage-underline-short" />
-			<br />
-			<input class="form-control subscribe-text" id="inputdefault" type="text">
-			<button type="button" class="btn btn-warning subscribe-button">Email Me</button>
+			<form class="form-inline">
+					<label class="sr-only" for="txt-email">Email Address</label>
+  				<input type="text" class="form-control" id="txt-email" placeholder="Email Address">
+					<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span></button>
+			</form>
 		</div>
 
-		<nav class="navbar navbar-inverse navbar-fixed-bottom">
+		<!--<nav class="navbar navbar-inverse navbar-fixed-bottom">
   		<div class="container">
 				<footer>
-					<h4>[ In the mean time ]</h4>
 					<img class="socialmedia-icon" src="../images/social-media/circle/Linkedin.png" />
 					<img class="socialmedia-icon" src="../images/social-media/circle/Github.png" />
 					<img class="socialmedia-icon" src="../images/social-media/circle/Twitter.png" />
 					<img class="socialmedia-icon" src="../images/social-media/circle/Instagram.png" />
 					<img class="socialmedia-icon" src="../images/social-media/circle/Facebook.png" />
-				</footer>
+				</footer>-->
 			</div>
-	</nav>
+		</nav>
 	</body>
 </html>
