--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,19 +3,22 @@
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
 @import url('https://fonts.googleapis.com/css?family=Roboto:100');
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 /* font-family: 'Inconsolata', monospace;
    font-family: 'Montserrat Subrayada', sans-serif;
-   font-family: 'Open Sans', sans-serif; */
+   font-family: 'Open Sans', sans-serif;
+   font-family: 'Roboto', sans-serif;
+   font-family: 'Oswald', sans-serif; */
 
 html, body {
   width: 100%;
   height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Oswald', sans-serif;
   background: linear-gradient(
       rgba(0, 0, 0, 0.8),
       rgba(0, 0, 0, 0.8)
     ),
-    url('../images/background/background3.jpg') center center no-repeat;
+    url('../images/background/background.jpg') center center no-repeat;
   background-size: cover;
 }
 
@@ -23,6 +26,16 @@ html, body {
    background-color: transparent;
    background: transparent;
    border-bottom: .5px #888888 solid;
+}
+
+.navbar-fixed-bottom {
+  margin-bottom: 10px;
+  text-align: right;
+  border-top: .5px solid #999999;
+  border-bottom: 0px;
+  background-color: #000000;
+  width: 100%;
+  height: 75px;
 }
 
 .site-heading {
@@ -35,18 +48,6 @@ html, body {
 
 h1 {
   font-size: 5em;
-}
-
-.homepage-underline-long {
-  width: 80%;
-  color: orange;
-  opacity: .2;
-}
-
-.homepage-underline-short {
-  width: 60%;
-  color: #888888;
-  opacity: .2;
 }
 
 input {
@@ -75,19 +76,12 @@ input:focus {
 }
 
 .subscribe-text {
-  margin: auto;
-  padding: auto;
-  width: 80%;
+  width: 400px;
 }
 
 .subscribe-button {
   margin: auto;
   padding: auto;
-}
-
-footer {
-  margin-bottom: 10px;
-  text-align: center;
 }
 
 .socialmedia-icon {
