--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,6 +2,7 @@
 <html class="full" lang="en">
 	<head>
 		<meta charset="utf-8">
+		<base href="/">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="description" content="">
@@ -19,6 +20,16 @@
 		<!--Styles-->
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 
+		<!-- JS -->
+    <script src="libs/angular/angular.min.js"></script>
+    <script src="libs/angular-route/angular-route.min.js"></script>
+
+		<!--Custom JS-->
+		<script src="js/controllers/SpotifyCtrl.js"></script>
+    <script src="js/services/SpotifyService.js"></script>
+    <script src="js/appRoutes.js"></script>
+    <script src="js/app.js"></script>
+
 	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	    <!--[if lt IE 9]>
@@ -26,7 +37,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 	</head>
-	<body>
+	<body ng-app="ryanscherer" ng-controller="SpotifyController">
 			<nav class="navbar navbar-inverse navbar-fixed-top">
 			  <div class="container-fluid">
 			    <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,6 +56,7 @@
 			      <ul class="nav navbar-nav navbar-right">
 			        <li class="active uppercase"><a href="#">About <span class="sr-only">(current)</span></a></li>
 			        <li class="uppercase"><a href="#">Contact</a></li>
+							<li class="uppercase"><a href="/spotify">Music</a></li>
 			        <li class="dropdown">
 			          <a href="#" class="dropdown-toggle uppercase" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 				          Photos <span class="caret"></span>
@@ -72,6 +84,9 @@
 					<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span></button>
 			</form>
 		</div>
+		
+		<!-- angular dynamic content -->
+		<div ng-view></div>
 
 		<!--<nav class="navbar navbar-inverse navbar-fixed-bottom">
   		<div class="container">
